--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/bootstrap.css">
+
+    <style media="screen">
+        .skyblue{
+            background: skyblue;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+        }
+        .pink{
+            background: pink;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+        }
+        .light-pink{
+            background: rgb(248, 231, 234);
+        }
+    </style>
+
     <title>Document</title>
 </head>
-<body>
-    
+<body class="light-pink">
+    <div>
+        
+    </div>
+
+
+
+
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
