コードのページを追加

--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
     <title>Document</title>
 </head>
 <body class="light-pink">
-    <div>
-        
-    </div>
+    <a href="code_top.html">プログラミング</a><br>
+    
 
+    <!-- 
+        書きたいことリスト
+        ・コード
+            ・githubへのリンク
+        ・見たアニメ
+            ・なんらかのリンク
+        ・持ってる漫画
+        ・描いた絵
+            ・pixivへのリンク
+     -->
 
 
 
