--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
     </style>
 
-    <title>Document</title>
+    <title>homepage</title>
 </head>
 <body class="light-pink">
     <a href="code_top.html">プログラミング</a><br>
