--- a/code_top.html
+++ b/code_top.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.css">
 
+    <style media="screen">
+        .light_pink{
+            background: rgb(248, 231, 234);
+        }
+    </style>
 
     <title>Document</title>
 </head>
-<body>
+<body class="light_pink">
     <!-- 
         素数大富豪探索
         素数大富豪対戦
