--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
             text-align: center;
             line-height: 100px;
         }
-        .light-pink{
+        .light_pink{
             background: rgb(248, 231, 234);
         }
     </style>
 
     <title>homepage</title>
 </head>
-<body class="light-pink">
-    <a href="code_top.html">プログラミング</a><br>
+<body class="light_pink">
+    <div class="text-center">
+        <a href="code_top.html">プログラミング</a><br>
+        <a href="paint_top.html">イラスト</a><br>
+        <a href="anime_top.html">アニメ</a><br>
+        <a href="comics/comic_top.html">漫画</a><br>
+    </div>
+    
     
 
     <!-- 
