--- a/paint_top.html
+++ b/paint_top.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.css">
-    
+
     <style media="screen">
-        .light-pink{
+        .light_pink{
             background: rgb(248, 231, 234);
         }
     </style>
 
     <title>Document</title>
 </head>
-<body>
+<body class="light_pink">
+    ここはイラストのページです
 
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/bootstrap.css">
+
 </body>
 </html>
