--- a/anime/anime_top.html
+++ b/anime/anime_top.html
@@ -19,28 +19,28 @@
     <div class="w-75 mx-auto">
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://hitoribocchi.jp/" class="card">
             <img src="anime_img/botti.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ひとりぼっちの〇〇生活</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://www.lucky-ch.com/" class="card">
             <img src="anime_img/lukeyster.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">らき☆すた</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://teibotv.com/" class="card">
             <img src="anime_img/teibou.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">放課後ていぼう日誌</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://nonnontv.com/tvanime/" class="card">
             <img src="anime_img/nonnon.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">のんのんびより</h3>
@@ -50,28 +50,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://hinakonote.jp/" class="card">
             <img src="anime_img/hinako.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ひなこのーと</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://kimetsu.com/anime/risshihen/" class="card">
             <img src="anime_img/kimetu.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">鬼滅の刃</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://kyokousuiri.jp/" class="card">
             <img src="anime_img/kyokou.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">虚構推理</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.yuyushiki.net/" class="card">
             <img src="anime_img/yuyu.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ゆゆ式</h3>
@@ -81,28 +81,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://koiastv.com/" class="card">
             <img src="anime_img/koias.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">恋する小惑星</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://saikoro-club.com/" class="card">
             <img src="anime_img/saikoro.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">放課後さいころ倶楽部</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://girls-last-tour.com/" class="card">
             <img src="anime_img/ryokou.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">少女終末旅行</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.tbs.co.jp/anime/hidamari/1st/index-j.html" class="card">
             <img src="anime_img/hidamari.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ひだまりスケッチ</h3>
@@ -112,28 +112,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="https://slow-start.com/" class="card">
             <img src="anime_img/surosuta.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">スロウスタート</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://jyoshimuda.com/" class="card">
             <img src="anime_img/zyosimuda.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">女子高生の無駄遣い</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://gochiusa.com/01/" class="card">
             <img src="anime_img/gotiusa.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ご注文はうさぎですか？</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.tbs.co.jp/anime/machikado/" class="card">
             <img src="anime_img/mazoku.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">まちカドまぞく</h3>
@@ -143,21 +143,21 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="https://dumbbell-anime.jp/" class="card">
             <img src="anime_img/danberu.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ダンベル何キロ持てる？</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://magicofstella.com/" class="card">
             <img src="anime_img/stera.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ステラのまほう</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://senkosan.com/" class="card">
             <img src="anime_img/brends.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ブレンド・S</h3>
@@ -174,28 +174,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="https://yuruyuri.com/10th/" class="card">
             <img src="anime_img/yuruyuri.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ゆるゆり</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.a-ch.jp/" class="card">
             <img src="anime_img/achan.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">Aチャンネル</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://watatentv.com/" class="card">
             <img src="anime_img/wataten.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">私に天使が舞い降りた！</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://www.kinmosa.com/" class="card">
             <img src="anime_img/kinmoza.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">きんいろモザイク</h3>
@@ -205,28 +205,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="https://www.ten-sura.com/" class="card">
             <img src="anime_img/tensura.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">転生したらスライムだった件</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.vap.co.jp/deathparade/" class="card">
             <img src="anime_img/dethe.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">デス・パレード</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://releasethespyce.jp/" class="card">
             <img src="anime_img/ririsupa.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">RELEASE THE SPYCE</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://sansyasanyou.com/" class="card">
             <img src="anime_img/sansya.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">三者三葉</h3>
@@ -236,28 +236,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://kyuketsukisan-anime.com/" class="card">
             <img src="anime_img/kyuuketuki.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">となりの吸血鬼さん</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://animayell.com/" class="card">
             <img src="anime_img/anima.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">アニマエール！</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://zombielandsaga.com/" class="card">
             <img src="anime_img/zonbi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ゾンビランドサガ</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://akanesasushojo.com/" class="card">
             <img src="anime_img/akane.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">あかねさす少女</h3>
@@ -267,28 +267,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="https://psycho-pass.com/archive/" class="card">
             <img src="anime_img/phycho.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">PSYCHO-PASS</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://www1.ntv.co.jp/kitakubu/" class="card">
             <img src="anime_img/kitakubu.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">帰宅部活動記録</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://newgame-anime.com/" class="card">
             <img src="anime_img/newg.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">NEW GAME!</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://mv.avex.jp/ga/" class="card">
             <img src="anime_img/ga.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">GA 芸術科アートデザインクラス</h3>
@@ -298,28 +298,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://www.kyotoanimation.co.jp/haruhi/" class="card">
             <img src="anime_img/haruhi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">涼宮ハルヒの憂鬱</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.tbs.co.jp/anime/k-on/" class="card">
             <img src="anime_img/k-on.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">けいおん！</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://asobiasobase.com/" class="card">
             <img src="anime_img/asobi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">あそびあそばせ</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://hanebad.com/" class="card">
             <img src="anime_img/bado.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">はねバド！</h3>
@@ -329,28 +329,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="https://hataraku-saibou.com/" class="card">
             <img src="anime_img/saibou.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">はたらく細胞</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://happysugarlife.tv/" class="card">
             <img src="anime_img/hapi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ハッピーシュガーライフ</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://chiochan.jp/" class="card">
             <img src="anime_img/tio.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ちおちゃんの通学路</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://jashinchan.com/" class="card">
             <img src="anime_img/zyasin.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">邪神ちゃんドロップキック</h3>
@@ -360,28 +360,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://gabdro.com/" class="card">
             <img src="anime_img/gabu.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ガヴリールドロップアウト</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://yurucamp.jp/first/" class="card">
             <img src="anime_img/yuru.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ゆるキャン△</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://comic-girls.com/" class="card">
             <img src="anime_img/komiga.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">こみっくがーるず</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://demichan.com/" class="card">
             <img src="anime_img/demi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">亜人ちゃんは語りたい</h3>
@@ -391,28 +391,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://yorimoi.com/" class="card">
             <img src="anime_img/yorimoi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">宇宙よりも遠い場所</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://gakkougurashi.com/" class="card">
             <img src="anime_img/kurasi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">がっこうぐらし</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://steinsgate.tv/index.html" class="card">
             <img src="anime_img/stein.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">Steins Gate</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://ngnl.jp/tv/" class="card">
             <img src="anime_img/nogame.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ノーゲーム・ノーライフ</h3>
@@ -422,28 +422,28 @@
     </div><br><br>
 
     <div class="card-deck">
-        <a href="#" class="card">
+        <a href="http://yuyuyu.tv/" class="card">
             <img src="anime_img/yuyuyu.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">結城友奈は勇者である</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://youjo-senki.jp/tv/" class="card">
             <img src="anime_img/youzyo.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">幼女戦記</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.monogatari-series.com/" class="card">
             <img src="anime_img/monogatari.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">物語シリーズ</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="https://www.madoka-magica.com/tv/index.html" class="card">
             <img src="anime_img/madomagi.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">魔法少女まどか☆マギカ</h3>
