--- a/comics/comic_top.html
+++ b/comics/comic_top.html
@@ -33,6 +33,7 @@
 
     <div id="kirara"></div>
     <div class="w-75 mx-auto">
+    <h3>きらら作品</h3>
     <div class="card-deck">
         <a href="#" class="card">
             <img src="comics_img/kirara/k-on.jpg" alt="" class="card-img-top">
@@ -358,54 +359,25 @@
                 <p class="card-text">ごぼう</p>
             </div>
         </a>
-        <a href="#" class="card">
+        <div class="card">
             <img src="" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title"></h3>
                 <p class="card-text"></p>
             </div>
-        </a>
-        <a href="#" class="card">
+        </div>
+        <div class="card">
             <img src="" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title"></h3>
                 <p class="card-text"></p>
             </div>
-        </a>
+        </div>
     </div><br><br>
 
-    <div class="card-deck">
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-    </div><br><br>
 
     <div id="others"></div>
+    <h3>その他作品</h3>
     <div class="card-deck">
         <a href="#" class="card">
             <img src="comics_img/others/yuruyuri.jpg" alt="" class="card-img-top">
@@ -507,59 +479,29 @@
                 <p class="card-text">中谷鳰</p>
             </div>
         </a>
-        <a href="#" class="card">
+        <div class="card">
             <img src="comics_img/others/" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title"></h3>
                 <p class="card-text"></p>
             </div>
-        </a>
-        <a href="#" class="card">
+        </div>
+        <div class="card">
             <img src="" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title"></h3>
                 <p class="card-text"></p>
             </div>
-        </a>
-        <a href="#" class="card">
+        </div>
+        <div class="card">
             <img src="" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title"></h3>
                 <p class="card-text"></p>
             </div>
-        </a>
+        </div>
     </div><br><br>
 
-    <div class="card-deck">
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <p class="card-text"></p>
-            </div>
-        </a>
-    </div><br><br>
 
     </div>
 
