--- a/anime/anime_top.html
+++ b/anime/anime_top.html
@@ -11,6 +11,11 @@
         }
     </style>
 
+    <style>
+        .card-deck .card {
+            margin-bottom: 15px;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body class="light_pink">
@@ -47,7 +52,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://hinakonote.jp/" class="card">
@@ -78,7 +83,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://koiastv.com/" class="card">
@@ -109,7 +114,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://slow-start.com/" class="card">
@@ -140,7 +145,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://dumbbell-anime.jp/" class="card">
@@ -171,7 +176,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://yuruyuri.com/10th/" class="card">
@@ -202,7 +207,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.ten-sura.com/" class="card">
@@ -233,7 +238,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://kyuketsukisan-anime.com/" class="card">
@@ -264,7 +269,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://psycho-pass.com/archive/" class="card">
@@ -295,7 +300,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://www.kyotoanimation.co.jp/haruhi/" class="card">
@@ -326,7 +331,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://hataraku-saibou.com/" class="card">
@@ -357,7 +362,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://gabdro.com/" class="card">
@@ -388,7 +393,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://yorimoi.com/" class="card">
@@ -419,7 +424,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="http://yuyuyu.tv/" class="card">
@@ -450,7 +455,7 @@
                 <p class="card-text"></p>
             </div>
         </a>
-    </div><br><br>
+    </div>
     </div>
 
     <script type="text/javascript" src="../js/jquery.js"></script>
