add : space.css

--- a/comics/comic_top.html
+++ b/comics/comic_top.html
@@ -15,11 +15,11 @@
         }
     </style>
 
+    <link rel="stylesheet" href="../css/space.css">
     <title>Document</title>
 </head>
 <body class="light_pink">
-    <br><br>
-    <div class="w-50 mx-auto">
+    <div class="w-50 mx-auto link_box_padding">
     <div class="card">
     <div class="light_green">
     <div class="text-center">
@@ -29,7 +29,7 @@
     </div>
     </div>
     </div> 
-    </div><br><br>
+    </div>
 
     <div id="kirara"></div>
     <div class="w-75 mx-auto">
@@ -63,7 +63,7 @@
                 <p class="card-text">得能正太郎</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -94,7 +94,7 @@
                 <p class="card-text">篤見唯子</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -125,7 +125,7 @@
                 <p class="card-text">きゆずきさとこ</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -156,7 +156,7 @@
                 <p class="card-text">大沖</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -187,7 +187,7 @@
                 <p class="card-text">海老川ケイ</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -218,7 +218,7 @@
                 <p class="card-text">あfろ</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -249,7 +249,7 @@
                 <p class="card-text">相崎うたう</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -280,7 +280,7 @@
                 <p class="card-text">かきふらい</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -311,7 +311,7 @@
                 <p class="card-text">浜弓場双</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -342,7 +342,7 @@
                 <p class="card-text">双見酔</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -373,7 +373,7 @@
                 <p class="card-text"></p>
             </div>
         </div>
-    </div><br><br>
+    </div>
 
 
     <div id="others"></div>
@@ -407,7 +407,7 @@
                 <p class="card-text">椋木ななつ</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -438,7 +438,7 @@
                 <p class="card-text">甘党</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -469,7 +469,7 @@
                 <p class="card-text">リムコロ</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="#" class="card">
@@ -500,7 +500,7 @@
                 <p class="card-text"></p>
             </div>
         </div>
-    </div><br><br>
+    </div>
 
 
     </div>
