--- a/anime/anime_top.html
+++ b/anime/anime_top.html
@@ -11,11 +11,7 @@
         }
     </style>
 
-    <style>
-        .card-deck .card {
-            margin-bottom: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/space.css">
     <title>Document</title>
 </head>
 <body class="light_pink">
