--- a/paint/paint_top.html
+++ b/paint/paint_top.html
@@ -11,11 +11,12 @@
         }
     </style>
 
+    <link rel="stylesheet" href="../css/space.css">
     <title>Document</title>
 </head>
 <body class="light_pink">
-    <br><br>
-    <div class="w-50 mx-auto">
+    
+    <div class="w-50 mx-auto link_box_padding">
         <div class="card">
         <div class="light_green">
         <div class="text-center">
@@ -25,7 +26,7 @@
         </div>
         </div>
         </div> 
-        </div><br><br>
+        </div>
 
     <div class="w-75 mx-auto">
     <div id="illustration"></div>
@@ -59,7 +60,7 @@
                 <p class="card-text">東方Project</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.pixiv.net/artworks/83199292" class="card">
@@ -90,7 +91,7 @@
                 <p class="card-text">虚構推理</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.pixiv.net/artworks/80012966" class="card">
@@ -121,7 +122,7 @@
                 <p class="card-text">アニマエール！</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.pixiv.net/artworks/79205962" class="card">
@@ -152,7 +153,7 @@
                 <p class="card-text">Bang' Dream!</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.pixiv.net/artworks/78991019" class="card">
@@ -183,7 +184,7 @@
                 <p class="card-text">世話やきキツネの仙狐さん</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.pixiv.net/artworks/75156962" class="card">
@@ -214,7 +215,7 @@
                 <p class="card-text">東方Project</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div class="card-deck">
         <a href="https://www.pixiv.net/artworks/69035005" class="card">
@@ -245,7 +246,7 @@
                 <p class="card-text">東方Project</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
     <div id="comic"></div>
     <h3>二次創作　漫画</h3>
@@ -279,7 +280,7 @@
                 <p class="card-text">Bang' Dream!</p>
             </div>
         </a>
-    </div><br><br>
+    </div>
 
 
     </div>
