--- a/anime/anime_top.html
+++ b/anime/anime_top.html
@@ -157,14 +157,14 @@
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="http://senkosan.com/" class="card">
+        <a href="https://blend-s.jp/" class="card">
             <img src="anime_img/brends.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">ブレンド・S</h3>
                 <p class="card-text"></p>
             </div>
         </a>
-        <a href="#" class="card">
+        <a href="http://senkosan.com/" class="card">
             <img src="anime_img/senko.jpg" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">世話やきキツネの仙狐さん</h3>
