--- a/index.html
+++ b/index.html
@@ -36,14 +36,10 @@
     
 
     <!-- 
-        書きたいことリスト
-        ・コード
-            ・githubへのリンク
-        ・見たアニメ
-            ・なんらかのリンク
-        ・持ってる漫画
-        ・描いた絵
-            ・pixivへのリンク
+        プロフィール
+        更新状況
+        ツイッター小窓
+        各種リンク
      -->
 
 
