--- a/index.html
+++ b/index.html
@@ -18,30 +18,50 @@
             text-align: center;
             line-height: 100px;
         }
-        .light_pink{
-            background: rgb(248, 231, 234);
-        }
     </style>
 
     <title>homepage</title>
 </head>
-<body class="light_pink">
-    <div class="text-center">
-        <a href="code/code_top.html">プログラミング</a><br>
-        <a href="paint/paint_top.html">イラスト</a><br>
-        <a href="anime/anime_top.html">アニメ</a><br>
-        <a href="comics/comic_top.html">漫画</a><br>
+<body>
+    <div class="resp">
+        <div class="topimg">
+            <div class="fadein">
+                <img src="image/top.jpg">
+            </div>
+        </div>
+        <div class="logo">
+            <img src="image/kohaku.jpg">
+        </div>
+        <div class="sub1">
+            <a href="paint/paint_top.html">
+                <img src="image/illust.jpg">
+            </a>
+        </div>
+        <div class="sub2">
+            <a href="">
+                <img src="image/plofile.jpg">
+            </a>
+        </div>
+        <div class="sub3">
+            <a href="code/code_top.html">
+                <img src="image/program.jpg">
+            </a>
+        </div>
+        <div class="sub4">
+            <a href="">
+                <img src="image/comicanime.jpg">
+            </a>
+        </div>
+        <div class="sub5">
+            NEWS<br>
+            xxxx.xx.xx 開設
+        </div>
+        <div class="sub6">
+            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300" data-theme="light" href="https://twitter.com/chappie1824?ref_src=twsrc%5Etfw">
+                Tweets by chappie1824</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
     </div>
-    
-    
-
-    <!-- 
-        プロフィール
-        更新状況
-        ツイッター小窓
-        各種リンク
-     -->
-
 
 
     <script type="text/javascript" src="js/jquery.js"></script>
