--- a/templa.html
+++ b/templa.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript+" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
@@ -49,4 +49,4 @@
             <p class="card-text"></p>
         </div>
     </a>
-</div><br><br>
+</div>
